remove usage of Base64 from apache commons